# ChangeLog for dev-python/numpy
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/numpy/ChangeLog,v 1.233 2014/03/18 20:21:22 bicatali Exp $

  18 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> numpy-1.8.0-r1.ebuild:
  Fix sed to allow complex pkg-config lines from mkl, thanks
  weihan3@illinois.edu, bug #504618

  24 Feb 2014; Justin Lecher <jlec@gentoo.org> numpy-1.8.0-r1.ebuild,
  -files/numpy-1.6.1-atlas.patch, -files/numpy-1.6.2-distutils.patch,
  -files/numpy-1.6.2-test-pareto.patch, -files/numpy-1.7.0-atlas.patch,
  -files/numpy-1.7.1-distutils-python33.patch,
  files/numpy-1.8.0-f2py-insecure-temporary.patch:
  Backport fix for regression in testsuite, #500484; enable full testsuite;
  thanks Arfrever helping here; drop old patches

  22 Feb 2014; Justin Lecher <jlec@gentoo.org> -numpy-1.6.2-r2.ebuild,
  -numpy-1.7.1.ebuild:
  Drop vulnerable versions, #500484

  22 Feb 2014; Justin Lecher <jlec@gentoo.org> -numpy-1.8.0.ebuild,
  metadata.xml:
  Drop vulnerable versions, #500484

  17 Feb 2014; Agostino Sarubbo <ago@gentoo.org> numpy-1.8.0-r1.ebuild:
  Stable for arm, wrt bug #500484

  16 Feb 2014; Agostino Sarubbo <ago@gentoo.org> numpy-1.8.0-r1.ebuild:
  Stable for alpha, wrt bug #500484

  09 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> numpy-1.8.0-r1.ebuild:
  x86 stable wrt security bug #500484

  09 Feb 2014; Agostino Sarubbo <ago@gentoo.org> numpy-1.8.0-r1.ebuild:
  Stable for sparc, wrt bug #500484

  09 Feb 2014; Agostino Sarubbo <ago@gentoo.org> numpy-1.8.0-r1.ebuild:
  Stable for ppc64, wrt bug #500484

  09 Feb 2014; Agostino Sarubbo <ago@gentoo.org> numpy-1.8.0-r1.ebuild:
  Stable for ppc, wrt bug #500484

  08 Feb 2014; Agostino Sarubbo <ago@gentoo.org> numpy-1.8.0-r1.ebuild:
  Stable for amd64, wrt bug #500484

  08 Feb 2014; Akinori Hattori <hattya@gentoo.org> numpy-1.8.0-r1.ebuild:
  ia64 stable wrt bug #500484
