@@ -7,13 +7,13 @@ DIST numpy-1.8.0.tar.gz 3779617 SHA256 2764d0819acc77e9ff81b060fe7f69530b0d85c26
 DIST numpy-html-1.8.0.zip 9779825 SHA256 39e853c1aaa711976333782f465f2579ca66e6698393f6ba79f5cc78317b1203 SHA512 33333c48a3f4d27ccddf6696dce4e346f8729d1f398128b3bfebb8a9d53ded7bb62b63a766319f6e49ba7cf8ca4e1ce252996acd263976ad2990bf9650d71043 WHIRLPOOL 7eea0ad3418c55d6104a4a115fcdcd5eeb291b9fc1237724e10dcbbf95bc7a4a23b519c64976ac405fb4c5abbaae87a6c747f9ad695d08b6326b459ba1fb8a15
 DIST numpy-ref-1.8.0.pdf 5324229 SHA256 49ecb1d768eb48598439cc63058f830ca3522fe1cfeba1a321086e9820ae8911 SHA512 d89314215c4adefa487b3e46b2babeda7739ee193fef821846d4df0089fabf2167b47dd2990b6bd423432f75238547548924622c6f3b9a90a36d578450001eb2 WHIRLPOOL 3bb12c719cbe4734014774f1bfc3f98af544ee2c407adb2e3ee988e2b1035ad0ef711eaa68168656be7b034df2db76c8789daa2940a048b4a6cb3af0bb0eca68
 DIST numpy-user-1.8.0.pdf 408447 SHA256 a8c30360f9e46c63cfdf48fa594971d94d68ce59ece08c13d4acde8b14032cfe SHA512 10293dba45377c6f1024125a49810b01e388eb33a3e8ed75b8ec39c2b93e53878cbe62e6b7adbf1e957dc47ef253e20304afa7d86d798fb5198887cbe618131f WHIRLPOOL 70cc5a5e97a919bb027f92ac87127fb1bc08d06e2a131c4b413837e76d8feab9b65d7dc9e95b6e797d057efb6abf0d2b3e7562ee3cd140b1ff1418bad5475335
-EBUILD numpy-1.8.0-r1.ebuild 4025 SHA256 8f9e80b4ef18bf015138f8dcf1b0d2808fee5abfc7bcafead5b419b8a3b4cceb SHA512 1bdc57548fedd5160adce4ebad13a2b8fb38892ead6439221506ac6f733438d73d7d233674e49482a9b75ceeb5a1ef93d6fb1f22d7848704d09d6d0b0d011d6d WHIRLPOOL 46def807170f8633ca4ad6a689600272d5356a1c9a8abe934555139d97816e9c164ddda43b2e2cd42dbd54eb0c46976d211590e7353f4e70c1cbbeff3e3d0d22
-MISC ChangeLog 32554 SHA256 8e39f99aac9dffffa22b37b179479a9176c0acb6b617da6dbc4374168379ac77 SHA512 072e4c773667f30988e8bc11ae9e3b45a698f1922e502cf3a2c2ad733bffee37a18a168f998fa1cb92e29687a9c1fc088973685844b581a7a2b6e26380561a7b WHIRLPOOL 4ebda2d130eaf39a79724df8867e7c5236cdea6bb1b35f6e1223e539cc093700144eaf7d190fcb7132d56265d5c62a1af83937724050f204f5e7de25c1acac70
+EBUILD numpy-1.8.0-r1.ebuild 4063 SHA256 0515baf5e5f4a9f455fde6950d493359e932aa9b02dfe53086ad82beaada5e3c SHA512 bc25073ed0fb4e901ff6b02af8b9f3ff32bd4e9d0f0f501bca087a8e0a43c6beda1c527940e9ce8fb6aea73fb1b8c968ef22ebc7880a0dc31618193404f7b28c WHIRLPOOL 1856a11b3a7a564b202380749f0550054929cdc34be8b833f5d2e2152757e82db0ea0e60f11c99980aaee366af984f3103495cd705b8bc69b7508abc40e7aade
+MISC ChangeLog 32678 SHA256 39dbb84e8490184f301f08536c10ae890e895287f8fd791afe18ecfc8f058231 SHA512 42c5e87cc59ae81806afc7880fbf41aaa4dff6a9620b9c0ad248696c368af292463e706143a2d7eaa26293fbe043f6d39ff5b71f46992332d802ef330e7c73e0 WHIRLPOOL 5f1709d9c1dc2bb8b6e60dd176731d8eee103ba197285066631086fc76810e0723c4c1e09f8ac54d981aedf5398f2273617a7a1fd57fd6033d208f53051f6590
 MISC metadata.xml 690 SHA256 9c315188497956a9b1e2a1373f7830f702cf9b588aabc33a3f5547ab75b20a84 SHA512 1adcf955fdc7f06b56a69c6345b79a4fb0ca0df17cfdcd1f3604a234389534f8f00b88ebddb3e47a39d563d7374d40349c3e4050799a31405446a1629f8c7698 WHIRLPOOL e2b34ab0b391c99a279dd11de292aafd9225f9743ec3bafafd980edb7522e772cde461705d5394569aa8dd73e72a210560eb50a23b2334ab5c12ec064099abd1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMoqsYACgkQ1ycZbhPLE2Ay+wCeISqaDPRxwVwsp+FmvP5AMOqL
-fyUAoIusULwxGyrGYBpsJc+cX6IvVIOm
-=9DH6
+iEYEAREIAAYFAlMx2IEACgkQ1ycZbhPLE2AVkQCeIStCxmeGiPiEulLPWCnQJ1jf
+u3QAn2f6xjL+My3fQJKBIuqBbdIlXgTc
+=Tn9N
 -----END PGP SIGNATURE-----
